@@ -29,6 +29,9 @@ fi
 AC_PATH_PROG(UPDATE_MIME_DATABASE, update-mime-database, no)
 AM_CONDITIONAL(HAVE_NEW_MIME, test x$UPDATE_MIME_DATABASE != xno)
 
+AC_PATH_PROG(UPDATE_DESKTOP_DATABASE, update-desktop-database, no)
+AM_CONDITIONAL(HAVE_NEWER_MIME, test x$UPDATE_DESKTOP_DATABASE != xno)
+
 dnl  -------------
 dnl | API docs    |--------------------------------------------
 dnl  -------------
