@@ -8,3 +8,4 @@ Terminal=false
 Type=Application
 Categories=Application;Office;ProjectManagement;
 StartupNotify=true
+MimeType=application/x-planner;
