@@ -1,3 +1,10 @@
+2004-07-30  Anders Carlsson  <andersca@gnome.org>
+
+	* configure.in:
+	* data/mime/Makefile.am:
+	* data/planner.desktop.in:
+	Support new mime activation specification.
+	
 2004-07-30  Richard Hult  <richard@imendio.com>
 
 	* examples/Makefile.am:
